# aequitas

./: .env.example  .gitignore  CLAUDE.md  ISSUES.md  README.md  package-lock.json  pyproject.toml  requirements-audit.txt
.claude/: settings.json
.playwright-mcp/: page-2026-05-22T17-23-35-598Z.yml  page-2026-05-22T17-24-44-825Z.yml  page-2026-05-22T17-25-04-660Z.yml  page-2026-05-22T17-25-14-013Z.yml  page-2026-05-22T17-25-21-333Z.yml  page-2026-05-22T17-25-24-854Z.yml  page-2026-05-22T17-25-29-587Z.yml  page-2026-05-22T17-25-33-956Z.yml  page-2026-05-22T17-52-04-197Z.yml  page-2026-05-22T17-52-58-083Z.yml  page-2026-05-22T17-56-29-337Z.yml  page-2026-05-22T17-58-16-162Z.yml  page-2026-05-22T17-58-24-094Z.yml  page-2026-05-22T17-58-53-071Z.yml
.serena/: project.yml
data/: models  raw
docs/: AEQUITAS_MASTER_REFERENCE.md  BLUEPRINT.md  END_TO_END_GAP_ANALYSIS.md  SESSION_REPORT_2026-03-11.md  SESSION_REPORT_2026-03-13.md  SESSION_REPORT_2026-03-14.md  data-downloads.md  figures-audit.md  figures-registry.md  paper-research-brief.md  paper-strategy.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
notebooks/: 01_data_audit.ipynb  02_data_understanding.ipynb  02a_column_inventory.ipynb  02b_bods_deep_dive.ipynb  02c_spatial_analysis.ipynb  02d_imd_subdomain_deep_dive.ipynb  02e_multivariate_clustering.ipynb  02f_cross_factor_synthesis.ipynb  02g_bods_service_levels.ipynb  02i_lsoa_stories.ipynb  03a_disability_ts038.ipynb  03b_hospitals.ipynb  03c_gp_surgeries.ipynb  03d_schools_gias.ipynb  03d_schools_gias.py  03e_employment_bres.ipynb  (+13 more)
(+347 files in other folders)
