[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aequitas"
version = "0.1.0"
description = "UK bus transport policy intelligence platform"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "hdbscan>=0.8.38",
    "shap>=0.45.0",
    "pydantic>=2.6.0",
    "duckdb>=1.1.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "loguru>=0.7.0",
    "pyproj>=3.6.0",
    "requests>=2.31.0",
    "pyarrow>=15.0.0",
    "fastapi>=0.128.0",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.3.0",
    "google-generativeai>=0.8.0",
    "python-jose>=3.5.0",
    "reportlab>=4.5.1",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
aequitas = "aequitas.pipeline.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: marks tests as slow (>5 min, e.g. integration tests)"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]  # self/cls annotation not needed

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[tool.hatch.build.targets.wheel]
packages = ["src/aequitas"]
